# raspi-ipc-sample

./: .gitignore  CMakeLists.txt
.kiro/steering/: tech.md
cloud/deploy/: README.md
cloud/lambda/: bird_species_map.json  cloud_verifier.py  test_cloud_verifier.py
cloud/sagemaker/: bird_labels.json  deploy_model.py  handler_dinov2.py  inference.py  model_config.json  requirements.txt
cloud/sagemaker/tests/: test_bioclip_inference.py  test_bioclip_integration.py  test_deploy_integration.py  test_endpoint_update.py  test_inference_bug.py  test_inference_preservation.py  test_inference_properties.py  test_inference_unit.py  test_package_model.py
cloud/sagemaker/training/: clean_data.py  clean_sagemaker.py  download_inat_data.py  launch_cleaning.py  launch_full_ft_cropped_useast1.py  launch_full_ft_original_useast1.py  launch_head_original_p3_useast1.py  launch_training.py  launch_training_cropped.py  launch_training_full_finetune.py  launch_training_full_finetune_spot.py  launch_training_original.py  submit_ft_jobs.py  test_compare.py  test_model.py  train_dinov2.py  train_sagemaker.py
deploy/: smart-camera.service
device/: CMakeLists.txt
device/ai/: __init__.py  activity_detector.py  config.py  confirmation.py  iot_credential_provider.py  ipc_client.py  requirements.txt  run_detector.sh  run_uploader.sh  s3_uploader.py  session.py
device/ai/tests/: test_config.py  test_confirmation.py  test_confirmation_properties.py  test_ipc_client.py  test_s3_uploader.py  test_session.py
device/config/: default.ini
device/deploy/: activity-detector.service  s3-uploader.service  smart-camera.service
device/include/ai/: frame_exporter.h
device/include/auth/: iot_authenticator.h
device/include/buffer/: frame_buffer_pool.h
device/include/config/: config_manager.h
device/include/core/: frame.h  stream_mode_fsm.h  types.h
device/include/logging/: log_manager.h
device/include/monitor/: health_monitor.h
device/include/pipeline/: video_producer.h
device/include/webrtc/: webrtc_agent.h
device/scripts/: install.sh
device/src/: main.cpp
device/src/ai/: ai_pipeline.cpp  frame_exporter.cpp
device/src/camera/: v4l2_source.cpp
device/src/config/: config_manager.cpp
device/src/control/: bitrate_controller.cpp
device/src/logging/: log_manager.cpp
device/src/monitor/: connection_monitor.cpp  health_monitor.cpp  watchdog.cpp
device/src/pipeline/: gstreamer_pipeline.cpp  video_producer.cpp
device/src/stream/: stream_uploader.cpp
device/src/webrtc/: webrtc_agent.cpp
device/tests/: CMakeLists.txt  test_bitrate_controller.cpp  test_config_manager.cpp  test_connection_monitor.cpp  test_frame_exporter.cpp  test_gstreamer_pipeline.cpp  test_health_monitor.cpp  test_iot_authenticator.cpp  test_log_manager.cpp  test_resource_guard.cpp  test_stream_uploader.cpp  test_types.cpp  test_watchdog.cpp  test_webrtc_agent.cpp
docs/: AWS_SETUP.md  CHANGELOG.md  DEVLOG.md  model-evaluation-report.md
docs/experiments/: 01-dinov2-finetune.md
include/ai/: ai_pipeline.h
include/camera/: camera_source.h
include/config/: config_manager.h
include/control/: bitrate_controller.h
include/core/: resource_guard.h  shutdown_handler.h  stream_mode.h
include/monitor/: connection_monitor.h  health_monitor.h  watchdog.h
include/pipeline/: gstreamer_pipeline.h  pipeline_orchestrator.h
include/stream/: stream_uploader.h
include/webrtc/: webrtc_agent.h
scripts/: install.sh  uninstall.sh
src/: main.cpp
src/auth/: iot_authenticator.cpp
src/buffer/: frame_buffer_pool.cpp
src/camera/: camera_source_factory.cpp  libcamera_source.cpp  v4l2_source.cpp  videotestsrc_source.cpp
src/config/: config_manager.cpp
src/core/: resource_guard.cpp  shutdown_handler.cpp  stream_mode_fsm.cpp
src/monitor/: health_monitor.cpp
src/pipeline/: gstreamer_pipeline.cpp  pipeline_orchestrator.cpp
src/stream/: stream_uploader.cpp
src/webrtc/: webrtc_agent.cpp
tests/: CMakeLists.txt  test_ai_pipeline.cpp  test_camera_source.cpp  test_config_manager.cpp  test_frame_buffer_pool.cpp  test_gstreamer_pipeline.cpp  test_iot_authenticator.cpp  test_pipeline_orchestrator.cpp  test_shutdown_handler.cpp  test_stream_mode_fsm.cpp  test_stream_uploader.cpp  test_video_producer.cpp  test_webrtc_agent.cpp
viewer/: .env.example  Dockerfile  buildspec.yml  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vitest.config.ts
viewer/ecs/: task-definition.json
viewer/public/: index.html
viewer/server/: events.js  index.js
viewer/server/__tests__/: events.test.ts  server.test.ts
viewer/src/: App.tsx  index.css
viewer/src/__tests__/: ConfigPanel.test.tsx  EventsPanel.test.ts  StatsPanel.test.ts  TabView.test.ts  Timeline.test.ts  VideoPlayer.test.tsx  cognito.test.ts  package.test.ts  sigv4.test.ts  useAuth.test.ts  useDebugLog.test.ts  useHLS.test.ts  useStats.test.ts  useWebRTC.test.ts
viewer/src/auth/: cognito.ts  useAuth.ts
viewer/src/components/: ConfigPanel.tsx  DebugLog.tsx  EventsPanel.tsx  HLSPanel.tsx  Layout.tsx  StatsPanel.tsx  TabView.tsx  Timeline.tsx  VideoPlayer.tsx  WebRTCPanel.tsx
viewer/src/config/: env.ts
viewer/src/hooks/: useDebugLog.ts  useEvents.ts  useHLS.ts  useStats.ts  useWebRTC.ts
viewer/src/pages/: ViewerPage.tsx
viewer/src/services/: events.ts  kvs.ts  sigv4.ts
viewer/src/types/: index.ts
